[gd_scene load_steps=9 format=3 uid="uid://cxxwfxmhcb0um"]

[ext_resource type="AudioStream" uid="uid://nvuajuwrnevy" path="res://Musica/menu.mp3" id="1_pm5tp"]
[ext_resource type="Script" uid="uid://s7kbpwdgxliu" path="res://Scripts/Musica/musica_menu.gd" id="1_vegp4"]
[ext_resource type="AudioStream" uid="uid://djln2g6cf6c3x" path="res://Musica/MenuVer.mp3" id="2_2rxa6"]
[ext_resource type="AudioStream" uid="uid://cck758awmxaob" path="res://Musica/ranking.mp3" id="3_2rxa6"]
[ext_resource type="AudioStream" uid="uid://oyvi003wwmqk" path="res://Musica/2dojuego.mp3" id="5_51bec"]
[ext_resource type="AudioStream" uid="uid://ccqwt4kyv2sgp" path="res://Musica/juego3.mp3" id="6_g3sa3"]
[ext_resource type="AudioStream" uid="uid://cjkh7r25uk7wv" path="res://Musica/juego4.mp3" id="7_xk1gh"]
[ext_resource type="AudioStream" uid="uid://dmtulba1ne1c8" path="res://Musica/victoria.mp3" id="8_i0iqt"]

[node name="MusicaMenu" type="Node2D"]
script = ExtResource("1_vegp4")

[node name="MusicaMenu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_2rxa6")

[node name="Ranking" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_2rxa6")

[node name="MusicaJuego1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_pm5tp")

[node name="MusicaJuego2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_51bec")

[node name="MusicaJuego3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_g3sa3")

[node name="MusicaJuego4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_xk1gh")

[node name="Victoria" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_i0iqt")
